# setuptools-docker

./: README.md  setup.cfg
.github/workflows/: ci.yml
example/: init.sh  setup.cfg
example/setuptools_docker_example/: __init__.py
src/setuptools_docker/: Dockerfile.j2  __init__.py  command.py  docker-entrypoint.sh  docker.py
tests/: test_command.py  test_docker.py  test_example.py
tests/nginx_proxy/: .htpasswd  default.conf
