[metadata]
name=setuptools_docker
version=0.1.0
description=A setuptools extension for building docker images as distribution

[options]
package_dir=
   =src
packages=find:
python_requires=>=3.8
install_requires =
    Jinja2
    furl

[options.packages.find]
where=src

[options.package_data]
setuptools_docker =
    docker-entrypoint.sh
    Dockerfile.j2

[options.entry_points]
distutils.commands=
    bdist_docker=setuptools_docker:bdist_docker

[options.extras_require]
tests =
    pytest
    docker
    requests

[bdist_wheel]
universal=True

[flake8]
max-line-length=100

[tool:pytest]
testpaths =
    tests
addopts = --import-mode=importlib
