[metadata]
name = setuptools_docker
author = Julian Faude
author_email = github@julianfau.de
description = A setuptools extension for building docker images for distribution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcharlytown/setuptools-docker
license = Apache-2.0
keywords = packaging, docker

[options]
package_dir =
   =src
packages= find:
python_requires=>=3.8
install_requires =
    Jinja2
    furl
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.package_data]
setuptools_docker =
    docker-entrypoint.sh
    Dockerfile.j2

[options.entry_points]
distutils.commands =
    bdist_docker=setuptools_docker:bdist_docker

[options.extras_require]
tests =
    pytest
    docker
    requests
    wheel

[bdist_wheel]
universal = True

[flake8]
max-line-length=100

[tool:pytest]
testpaths =
    tests
addopts = --import-mode=importlib
