[metadata]
name = setuptools_docker_example
version = 0.0.1
description = Example flask app

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Flask
setup_requires =
    setuptools_docker # install separatly via pip install -e ..

[options.entry_points]
console_scripts =
    cli-name = mypkg.mymodule:some_func

[bdist_docker]
extra_os_packages =
    tree
extra_requirements = gunicorn[gevent]
entrypoint = python -m gunicorn.app.wsgiapp setuptools_docker_example:app
command = --bind :8000 --workers 2 --worker-class gevent
#index_url = https://pypi.org/simple
#index_username = j
#index_password = supersecret
user_id = 1100
environment_vars =
    BLA=BLUB
    FIZZ=BUZZ
init_scripts =
    init.sh